feat: Retrieve events related to a sgcluster
