# stackgres-k8s/src/common/src/main/java/io/stackgres/common/resource/StatefulSetFinder.java
@@ -1,0 +1,72 @@
+/*
+ * Copyright (C) 2019 OnGres, Inc.
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
+package io.stackgres.common.resource;
+
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+
+import javax.enterprise.context.ApplicationScoped;
+import javax.inject.Inject;
+
+import io.fabric8.kubernetes.api.model.apps.StatefulSet;
+import io.fabric8.kubernetes.client.KubernetesClient;
+import io.stackgres.common.KubernetesClientFactory;
+
+@ApplicationScoped
+public class StatefulSetFinder implements
+    ResourceFinder<StatefulSet>,
+    ResourceScanner<StatefulSet> {
+
+  private KubernetesClientFactory kubClientFactory;
+
+  @Override
+  public Optional<StatefulSet> findByName(String name) {
+    throw new UnsupportedOperationException();
+  }
+
+  @Override
+  public Optional<StatefulSet> findByNameAndNamespace(String name, String namespace) {
+    try (KubernetesClient client = kubClientFactory.create()) {
+      return Optional.ofNullable(client.apps().statefulSets()
+          .inNamespace(namespace).withName(name).get());
+    }
+  }
+
+  @Override
+  public List<StatefulSet> findResources() {
+    try (KubernetesClient client = kubClientFactory.create()) {
+      return client.apps().statefulSets().inAnyNamespace().list().getItems();
+    }
+  }
+
+  public List<StatefulSet> findResourcesWithLabels(Map<String, String> labels) {
+    try (KubernetesClient client = kubClientFactory.create()) {
+      return client.apps().statefulSets()
+          .inAnyNamespace().withLabels(labels).list().getItems();
+    }
+  }
+
+  @Override
+  public List<StatefulSet> findResourcesInNamespace(String namespace) {
+    try (KubernetesClient client = kubClientFactory.create()) {
+      return client.apps().statefulSets().inNamespace(namespace).list().getItems();
+    }
+  }
+
+  public List<StatefulSet> findResourcesInNamespaceWithLabels(String namespace,
+      Map<String, String> labels) {
+    try (KubernetesClient client = kubClientFactory.create()) {
+      return client.apps().statefulSets()
+          .inNamespace(namespace).withLabels(labels).list().getItems();
+    }
+  }
+
+  @Inject
+  public void setKubClientFactory(KubernetesClientFactory kubClientFactory) {
+    this.kubClientFactory = kubClientFactory;
+  }
+}
